@@ -2023,6 +2023,13 @@ name|file
 init|=
 literal|null
 decl_stmt|;
+comment|// remember if the file is open, so that we don't try to close it
+comment|// more than once
+DECL|field|isOpen
+specifier|private
+name|boolean
+name|isOpen
+decl_stmt|;
 DECL|field|isClone
 name|boolean
 name|isClone
@@ -2051,6 +2058,10 @@ name|path
 argument_list|,
 literal|"r"
 argument_list|)
+expr_stmt|;
+name|isOpen
+operator|=
+literal|true
 expr_stmt|;
 name|length
 operator|=
@@ -2180,16 +2191,26 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+comment|// only close the file if this is not a clone and the
+comment|// file has not been closed yet
 if|if
 condition|(
 operator|!
 name|isClone
+operator|&&
+name|isOpen
 condition|)
+block|{
 name|file
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|isOpen
+operator|=
+literal|false
+expr_stmt|;
+block|}
 block|}
 DECL|method|seekInternal
 specifier|protected
@@ -2284,6 +2305,13 @@ name|file
 init|=
 literal|null
 decl_stmt|;
+comment|// remember if the file is open, so that we don't try to close it
+comment|// more than once
+DECL|field|isOpen
+specifier|private
+name|boolean
+name|isOpen
+decl_stmt|;
 DECL|method|FSIndexOutput
 specifier|public
 name|FSIndexOutput
@@ -2303,6 +2331,10 @@ name|path
 argument_list|,
 literal|"rw"
 argument_list|)
+expr_stmt|;
+name|isOpen
+operator|=
+literal|true
 expr_stmt|;
 block|}
 comment|/** output methods: */
@@ -2341,6 +2373,12 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+comment|// only close the file if it has not been closed yet
+if|if
+condition|(
+name|isOpen
+condition|)
+block|{
 name|super
 operator|.
 name|close
@@ -2351,6 +2389,11 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|isOpen
+operator|=
+literal|false
+expr_stmt|;
+block|}
 block|}
 comment|/** Random-access methods */
 DECL|method|seek
@@ -2402,8 +2445,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|file
-operator|.
 name|close
 argument_list|()
 expr_stmt|;
