@@ -230,6 +230,12 @@ Bug fixes
     classes from contrib/similarity, as their new home is under
     contrib/queries.
 
+25. LUCENE-669: Do not double-close the RandomAccessFile in
+    FSIndexInput/Output during finalize().  Besides sending an
+    IOException up to the GC, this may also be the cause intermittent
+    "The handle is invalid" IOExceptions on Windows when trying to
+    close readers or writers.
+
 Optimizations
 
   1. LUCENE-586: TermDocs.skipTo() is now more efficient for
